--- a/index.html
+++ b/index.html
@@ -238,10 +238,12 @@
         <!-- CONTENT AREA --><main class="relative flex-1 w-full max-w-7xl mx-auto">
 
             <!-- VIEW 1: HOME (Emphasized Web Service - LAYOUT UPDATED) --><div id="view-home" class="view-container active items-center justify-center text-left">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-10 items-end w-full max-w-7xl px-4 md:px-8">
+                <!-- Hapus items-end untuk memposisikan konten di tengah layar secara vertikal -->
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-10 w-full max-w-7xl px-4 md:px-8">
                     
                     <!-- KIRI (Left): Judul Utama -->
-                    <div class="flex flex-col justify-center min-h-[50vh] md:min-h-full">
+                    <!-- Menghapus min-h dan menambahkan py-4 untuk mencegah pemotongan teks besar -->
+                    <div class="flex flex-col justify-center h-full py-4">
                         <h1 class="text-[14vw] sm:text-[12vw] md:text-[11vw] leading-[0.85] font-display font-bold text-white tracking-tighter mb-4 md:mb-0">
                             <span class="mask-text"><span class="reveal-home magnetic-text">CUSTOM</span></span>
                             <span class="mask-text"><span class="reveal-home magnetic-text text-transparent bg-clip-text bg-gradient-to-r from-gray-100 to-gray-600">WEB BUILD</span></span>
@@ -249,7 +251,8 @@
                     </div>
                     
                     <!-- KANAN (Right): Deskripsi dan Tombol -->
-                    <div class="flex flex-col justify-end min-h-[50vh] pt-4 md:min-h-full">
+                    <!-- Menghapus min-h dan menyesuaikan ke h-full untuk keseimbangan layout vertikal -->
+                    <div class="flex flex-col justify-end h-full pt-4">
                         <p class="text-xl md:text-2xl text-gray-400 max-w-lg mb-12 font-light leading-relaxed reveal-home-opacity magnetic-text">
                             We are a <span class="font-bold text-white">Full-Stack Web Application Service</span>, specializing in adaptive architecture—from simple MVP websites to complex enterprise platforms.
                         </p>
