--- a/index.html
+++ b/index.html
@@ -242,17 +242,17 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-10 w-full max-w-7xl px-4 md:px-8">
                     
                     <!-- KIRI (Left): Judul Utama -->
-                    <!-- Menghapus min-h dan menambahkan py-4 untuk mencegah pemotongan teks besar -->
-                    <div class="flex flex-col justify-center h-full py-4">
-                        <h1 class="text-[14vw] sm:text-[12vw] md:text-[11vw] leading-[0.85] font-display font-bold text-white tracking-tighter mb-4 md:mb-0">
+                    <!-- Meningkatkan padding vertikal dan melonggarkan line-height -->
+                    <div class="flex flex-col justify-center h-full py-8">
+                        <h1 class="text-[14vw] sm:text-[12vw] md:text-[11vw] leading-[0.9] font-display font-bold text-white tracking-tighter mb-4 md:mb-0">
                             <span class="mask-text"><span class="reveal-home magnetic-text">CUSTOM</span></span>
                             <span class="mask-text"><span class="reveal-home magnetic-text text-transparent bg-clip-text bg-gradient-to-r from-gray-100 to-gray-600">WEB BUILD</span></span>
                         </h1>
                     </div>
                     
                     <!-- KANAN (Right): Deskripsi dan Tombol -->
-                    <!-- Menghapus min-h dan menyesuaikan ke h-full untuk keseimbangan layout vertikal -->
-                    <div class="flex flex-col justify-end h-full pt-4">
+                    <!-- Mengganti justify-end menjadi justify-start untuk mengangkat posisi visual -->
+                    <div class="flex flex-col justify-start h-full py-8">
                         <p class="text-xl md:text-2xl text-gray-400 max-w-lg mb-12 font-light leading-relaxed reveal-home-opacity magnetic-text">
                             We are a <span class="font-bold text-white">Full-Stack Web Application Service</span>, specializing in adaptive architecture—from simple MVP websites to complex enterprise platforms.
                         </p>
